--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "./src/matStyle.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -98,7 +98,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "./src/matStyle.scss",
               "src/styles.scss"
             ],
             "scripts": []
