--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/pwa": "^0.803.23",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
