--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
+    "@angular-devkit/schematics": "^9.0.1",
     "@angular/cli": "~8.3.25",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
