--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
+    "@angular-devkit/core": "^9.0.1",
     "@angular-devkit/schematics": "^9.0.1",
     "@angular/cli": "~8.3.25",
     "@angular/compiler-cli": "~8.2.14",
