--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "@angular/compiler": "~12.0.4",
     "@angular/core": "~12.0.4",
     "@angular/forms": "~12.0.4",
-    "@angular/material": "^12.0.5",
+    "@angular/material": "~12.0.5",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "@angular/service-worker": "~12.0.4",
-    "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
