--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "bootstrap": "^4.4.1",
+    "plyr": "^3.6.8",
     "rxjs": "~6.6.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.11.4"
